style/stye.css
/* font-family: 'Arimo', sans-serif;
font-family: 'Inter', sans-serif;
font-family: 'Rubik', sans-serif; */

*,
*::after,
::before {
  box-sizing: border-box;
}

html {
  font-size: 10px;
}

body {
  position: relative;
}

.container {
  width: 100%;
  max-width: 1092px;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  margin: 0 auto;
}

@media screen and (max-width: 760px) {
  .container {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

.header {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 2;
  padding-top: 3.6rem;
  padding-bottom: 3.6rem;
}

.header__wrapper {
  display: flex;
  justify-content: space-between;
  gap: 2rem;
}

.logo {
  width: 166.667px;
  height: 30px;
  display: inline-block;
}

@media screen and (max-width: 760px) {
  .logo {
    width: 111px;
    height: 20px;
  }
}

.logo__item {
  width: inherit;
  height: inherit;
}

/* .navbar {
} */

.navbar__list {
  display: flex;
  gap: 4.7rem;
}

@media screen and (max-width: 760px) {
  .navbar__list {
    gap: 3.1rem;
  }
}

.navbar__item {
  color: #292929;
  font-family: "Arimo", sans-serif;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 160%;
}

.navbar__item:hover {
  color: #44dcc1;
}

.navbar__link {
  text-decoration: none;
  color: inherit;
}

/* .main {
} */

.hero {
  padding-top: 16.8rem;
  min-height: 100vh;
  background-image: url(../img/Landing\ page\ [1366]\ 1.png);
  background-repeat: no-repeat;
  background-position: 50% 50%;
  background-size: cover;
  /* display: flex; */
}

.hero__wrapper {
  /* flex-grow: 1; */
  position: relative;
}

@media screen and (max-width: 760px) {
  .hero {
    background-image: url(../img/Background\ 1.png);
    padding-bottom: 4rem;
  }

  .hero__wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}

.hero__title {
  color: #29323f;
  font-family: "Rubik", sans-serif;
  font-size: 5rem;
  font-weight: 500;
  line-height: 120%;
  text-align: left;
  margin-bottom: 3rem;
  max-width: 432px;
}

.hero__text {
  color: #6e6e6e;
  font-family: "Arimo", sans-serif;
  font-size: 1.6rem;
  font-weight: 400;
  line-height: 160%;
  text-align: left;
  margin-bottom: 4rem;
  max-width: 330px;
}

@media screen and (max-width: 760px) {
  .hero__title {
    text-align: center;
    font-size: 4rem;
  }

  .hero__text {
    text-align: center;
    font-size: 1.4rem;
  }

  .hero__form {
    margin-bottom: 7rem;
  }
}

.form {
  width: 100%;
  max-width: 420px;
  position: relative;
}

.form__input {
  width: 100%;
}

.input {
  height: 52px;
  border-radius: 100px;
  border: 1px solid #ececec;
  background: #ececec;
  padding: 0 13.5rem 0 2.4rem;
  color: #292929;
  font-family: "Arimo", sans-serif;
  font-size: 1.6rem;
  font-weight: 400;
  line-height: 160%;
  outline: none;
}

.input:hover {
  border-color: #292929;
}

.input:focus {
  border-color: #44dcc1;
}

/* .input: {
  border-color: #292929;
} */

input::placeholder {
  color: #bababa;
  font-family: "Arimo", sans-serif;
  font-size: 1.6rem;
  font-weight: 400;
  line-height: 160%;
}

.form__button {
  position: absolute;
  right: 2px;
  top: 2px;
}

.button {
  border-radius: 50px;
  border: 1px solid #292929;
  background-color: #292929;
  height: 48px;
  padding: 0 2.8rem;
  color: #fff;
  text-align: center;
  font-family: "Arimo", sans-serif;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 160%;
  outline: none;
  cursor: pointer;
}

.button:hover {
  background-color: #44dcc1;
  border-color: #44dcc1;
}

.button:focus {
  background-color: #292929;
  border-color: #44dcc1;
}

.arrow-button {
  display: inline-block;
  width: 48px;
  height: 48px;
  position: absolute;
  left: 16px;
  bottom: -30%;
  border-radius: 50%;
}

.arrow-button__icon {
  width: inherit;
  height: inherit;
  fill: #292929;
}

.arrow-button:hover .arrow-button__icon {
  fill: #44dcc1;
}

.arrow-button:focus {
  fill: #292929;
  box-shadow: 0 0 0 1px #44dcc1;
}

.hero-img {
  display: none;
}

@media screen and (max-width: 760px) {
  .arrow-button {
    display: none;
  }

  .hero-img {
    margin: 0 auto;
    max-width: 600px;
    width: 70%;
    height: 0px;
    padding-bottom: 68%;
    position: relative;
    display: inline-block;
  }

  .hero-img__img {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    object-fit: contain;
  }
}

.section-investors {
  background-color: #f8f8f8;
  padding-top: 1rem;
  padding-bottom: 5.1rem;
}

.section-investors__title {
  color: #29323f;
  font-family: "Rubik", sans-serif;
  font-size: 3.8rem;
  font-weight: 500;
  line-height: 120%;
  margin-bottom: 4rem;
}

.section-investors__text {
  color: #6e6e6e;
  font-family: "Inter", sans-serif;
  font-size: 1.6rem;
  font-weight: 400;
  line-height: 160%;
  margin-bottom: 3rem;
}

.investors {
  display: flex;
  gap: 5.6rem;
  flex-wrap: wrap;
  justify-content: center;
}

@media screen and (max-width: 760px) {
  .investors {
    gap: 4rem 1rem;
    justify-content: start;
  }

  .investors__logo {
    flex: 0 0 calc(50% - 0.5rem);
  }
}

/* .investors__logo {
  flex: 0 0 calc(25% - 4.2rem);
} */

.investors__item {
  width: auto;
  height: 43.99px;
}

@media screen and (max-width: 760px) {
  .investors__item {
    max-width: 200px;
    width: 100%;
    height: auto;
  }
}

.section-call-to-try {
  background-color: #fff;
  margin-top: 6.4rem;
  margin-bottom: 6.3rem;
}

.section-call-to-try__wrapper {
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 2rem;
  flex-wrap: wrap;
}

@media screen and (max-width: 8200px) {
  /* .section-call-to-try__wrapper {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 3rem;
  } */
}

.customer-img {
  width: 100%;
  max-width: 374px;
  height: 0;
  padding-bottom: 41%;
  position: relative;
}

@media screen and (max-width: 820px) {
  .customer-img {
    padding-bottom: 65%;
  }

  .section-call-to-try__img {
    margin-bottom: 3rem;
  }
}
/* ... */

